fix: images overflowing screen

--- a/docs/.vitepress/theme/Styles/main.css
+++ b/docs/.vitepress/theme/Styles/main.css
@@ -11,3 +11,7 @@
 .dark .icon {
 	fill: white;
 }
+
+.min-h-screen img {
+	max-width: 100%;
+}
